--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
 matplotlib==3.8.0
 numpy==1.25.2
-pandas==2.1.0
+pandas==2.2.2
 streamlit==1.26.0
 openpyxl==3.1.2
 pyreadstat==1.2.5
 plotly==5.21.0
 geopandas==0.14.0
 statsmodels==0.14.2
+patsy==0.5.6
