--- a/.gitignore
+++ b/.gitignore
@@ -161,3 +161,5 @@ cython_debug/
 EU-GPP_test.dta
 .streamlit/secrets.toml
 .DS_Store
+inputs/A2J_justicejourney_wrangled.xlsx
+inputs/~$A2J_justicejourney_wrangled.xlsx
